--- a/Dashboard.Main/Views/Web.config
+++ b/Dashboard.Main/Views/Web.config
@@ -17,7 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
-        <add namespace="Dashboard" />
+        <add namespace="Dashboard.Main" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
