--- a/Dashboard.Main/Web.config
+++ b/Dashboard.Main/Web.config
@@ -11,7 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name ="DBCS" connectionString="data source=CRUD\SQLEXPRESS; database=rehearsals; Integrated Security=true" providerName="System.Data.SqlClient"/>
+    <add name ="crudconn" connectionString="data source=CRUD\SQLEXPRESS; database=rehearsals; Integrated Security=true" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
