--- a/Dashboard.Main/Dashboard.Main.csproj
+++ b/Dashboard.Main/Dashboard.Main.csproj
@@ -188,6 +188,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Employee\Index.cshtml" />
     <Content Include="Views\Cards\Index.cshtml" />
+    <Content Include="Views\travel\index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
