--- a/Textbook Exercises/ProASP.NET/RenderViews/Ch20_RenderViews.csproj
+++ b/Textbook Exercises/ProASP.NET/RenderViews/Ch20_RenderViews.csproj
@@ -97,8 +97,6 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Infrastructure\DebugDataView.cs" />
-    <Compile Include="Infrastructure\DebugDataViewEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -113,6 +111,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Infrastructure\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Home\" />
   </ItemGroup>
