--- a/Textbook Exercises/ProASP.NET/WorkingWithRazor/Ch20_WorkingWithRazor.csproj
+++ b/Textbook Exercises/ProASP.NET/WorkingWithRazor/Ch20_WorkingWithRazor.csproj
@@ -99,6 +99,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\CustomLocationViewEngine.cs" />
+    <Compile Include="Infrastructure\DebugDataView.cs" />
+    <Compile Include="Infrastructure\DebugDataViewEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
