--- a/Textbook Exercises/ProASP.NET/Ch21_HelperMethods/Ch21_HelperMethods.csproj
+++ b/Textbook Exercises/ProASP.NET/Ch21_HelperMethods/Ch21_HelperMethods.csproj
@@ -114,6 +114,8 @@
     <Content Include="Views\Home\CreatePerson.cshtml" />
     <Content Include="Views\Home\CreatePersonOld1.cshtml" />
     <Content Include="Views\Home\CreatePersonOld2.cshtml" />
+    <Content Include="Views\Home\DisplayPerson.cshtml" />
+    <Content Include="Views\Home\CreatePersonOld3.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
