--- a/Textbook Exercises/ProASP.NET/Ch21_HelperMethods/Ch21_HelperMethods.csproj
+++ b/Textbook Exercises/ProASP.NET/Ch21_HelperMethods/Ch21_HelperMethods.csproj
@@ -128,6 +128,7 @@
     <Content Include="Views\Shared\EditorTemplates\Enum.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\Boolean.cshtml" />
     <Content Include="Views\People\Index.cshtml" />
+    <Content Include="Views\People\GetPeople.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
