creating the ajax form

--- a/Textbook Exercises/ProASP.NET/Ch21_HelperMethods/Ch21_HelperMethods.csproj
+++ b/Textbook Exercises/ProASP.NET/Ch21_HelperMethods/Ch21_HelperMethods.csproj
@@ -129,6 +129,7 @@
     <Content Include="Views\Shared\EditorTemplates\Boolean.cshtml" />
     <Content Include="Views\People\Index.cshtml" />
     <Content Include="Views\People\GetPeople.cshtml" />
+    <Content Include="Views\People\GetPeople_Old1.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
