--- a/Textbook Exercises/ProASP.NET/Ch24_MvcModels/Ch24_MvcModels.csproj
+++ b/Textbook Exercises/ProASP.NET/Ch24_MvcModels/Ch24_MvcModels.csproj
@@ -111,6 +111,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\CreatePerson.cshtml" />
+    <Content Include="Views\Home\DisplaySummary.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
