--- a/Textbook Exercises/ProASP.NET/Ch24_MvcModels/Ch24_MvcModels.csproj
+++ b/Textbook Exercises/ProASP.NET/Ch24_MvcModels/Ch24_MvcModels.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Infrastructure\AddressSummaryBinder.cs" />
     <Compile Include="Infrastructure\CountryValueProvider.cs" />
     <Compile Include="Infrastructure\CustomValueProviderFactory.cs" />
     <Compile Include="Models\Address.cs" />
