--- a/Textbook Exercises/ProASP.NET/Ch25_ModelValidation/Ch25_ModelValidation.csproj
+++ b/Textbook Exercises/ProASP.NET/Ch25_ModelValidation/Ch25_ModelValidation.csproj
@@ -108,6 +108,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\MakeBooking.cshtml" />
     <Content Include="Views\Home\Completed.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\Boolean.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
