cleaning file and folders

--- a/Textbook Exercises/ProASP.NET/Ch26_ClientFeatures/Ch26_ClientFeatures.csproj
+++ b/Textbook Exercises/ProASP.NET/Ch26_ClientFeatures/Ch26_ClientFeatures.csproj
@@ -87,7 +87,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap.css" />
+    <Content Include="Content\bootstrap.min.css" />
     <Content Include="Global.asax" />
+    <Content Include="Content\bootstrap.css.map" />
+    <Content Include="Content\bootstrap.min.css.map" />
     <None Include="Scripts\jquery-3.7.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.1.js" />
     <Content Include="Scripts\jquery-3.7.1.min.js" />
