--- a/Textbook Exercises/ProASP.NET/Ch26_ClientFeatures/Ch26_ClientFeatures.csproj
+++ b/Textbook Exercises/ProASP.NET/Ch26_ClientFeatures/Ch26_ClientFeatures.csproj
@@ -92,6 +92,10 @@
     <Content Include="Global.asax" />
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap.min.css.map" />
+    <Content Include="Scripts\bootstrap.bundle.js" />
+    <Content Include="Scripts\bootstrap.bundle.min.js" />
+    <Content Include="Scripts\bootstrap.bundle.js.map" />
+    <Content Include="Scripts\bootstrap.bundle.min.js.map" />
     <None Include="Scripts\jquery-3.7.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.1.js" />
     <Content Include="Scripts\jquery-3.7.1.min.js" />
