--- a/Textbook Exercises/ProASP.NET/Ch27_WebServices/Ch27_WebServices.csproj
+++ b/Textbook Exercises/ProASP.NET/Ch27_WebServices/Ch27_WebServices.csproj
@@ -147,6 +147,8 @@
     <Content Include="Scripts\jquery-3.7.1.min.js" />
     <Content Include="Scripts\jquery-3.7.1.slim.js" />
     <Content Include="Scripts\jquery-3.7.1.slim.min.js" />
+    <Content Include="Scripts\knockout-3.5.1.debug.js" />
+    <Content Include="Scripts\knockout-3.5.1.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
