--- a/Textbook Exercises/ProASP.NET/Ch27_WebServices/packages.config
+++ b/Textbook Exercises/ProASP.NET/Ch27_WebServices/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="bootstrap" version="5.3.3" targetFramework="net481" />
   <package id="jQuery" version="3.7.1" targetFramework="net481" />
+  <package id="knockoutjs" version="3.5.1" targetFramework="net481" />
   <package id="Microsoft.AspNet.Mvc" version="5.3.0" targetFramework="net481" />
   <package id="Microsoft.AspNet.Razor" version="3.3.0" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebApi" version="5.3.0" targetFramework="net481" />
