--- a/Textbook Exercises/ProASP.NET/Ch27_WebServices/Ch27_WebServices.csproj
+++ b/Textbook Exercises/ProASP.NET/Ch27_WebServices/Ch27_WebServices.csproj
@@ -154,6 +154,8 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\_Summary.cshtml" />
+    <Content Include="Views\Home\_Editor.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
