--- a/Textbook Exercises/ProASP.NET/Ch27_WebServices/Ch27_WebServices.csproj
+++ b/Textbook Exercises/ProASP.NET/Ch27_WebServices/Ch27_WebServices.csproj
@@ -160,6 +160,7 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\CustomWebController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
