--- a/Textbook Exercises/PRO_ASP.NET_MVC/PartOne/Views/web.config
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/PartOne/Views/web.config
@@ -16,7 +16,7 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
-        <add namespace="Chapter2" />
+        <add namespace="Introduction" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
