--- a/Textbook Exercises/PRO_ASP.NET_MVC/PartOne/PartOne.Introduction.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/PartOne/PartOne.Introduction.csproj
@@ -100,6 +100,10 @@
     <Compile Include="Areas\Chapter1\Controllers\HomeController.cs" />
     <Compile Include="Areas\Chapter2\Chapter2AreaRegistration.cs" />
     <Compile Include="Areas\Chapter2\Controllers\HomeController.cs" />
+    <Compile Include="Areas\Chapter3\Chapter3AreaRegistration.cs" />
+    <Compile Include="Areas\Chapter3\Controllers\AdminController.cs" />
+    <Compile Include="Areas\Chapter3\Models\IUserRepository.cs" />
+    <Compile Include="Areas\Chapter3\Models\User.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -111,6 +115,7 @@
     <Content Include="Views\web.config" />
     <Content Include="Areas\Chapter1\Views\web.config" />
     <Content Include="Areas\Chapter2\Views\web.config" />
+    <Content Include="Areas\Chapter3\Views\web.config" />
     <None Include="packages.config" />
     <Content Include="Areas\Chapter2\Views\Home\Index.cshtml" />
     <Content Include="Areas\Chapter2\Views\Home\RSVPForm.cshtml" />
@@ -128,6 +133,8 @@
     <Folder Include="Areas\Chapter1\Views\Home\" />
     <Folder Include="Areas\Chapter1\Views\Shared\" />
     <Folder Include="Areas\Chapter2\Views\Shared\" />
+    <Folder Include="Areas\Chapter3\Views\Home\" />
+    <Folder Include="Areas\Chapter3\Views\Shared\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Home\" />
   </ItemGroup>
