covered razor expressions

--- a/Textbook Exercises/PRO_ASP.NET_MVC/PartOne/PartOne.Introduction.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/PartOne/PartOne.Introduction.csproj
@@ -131,6 +131,9 @@
     <Content Include="Areas\Chapter5\Views\web.config" />
     <Content Include="Areas\Chapter5\Views\Home\Index.cshtml" />
     <Content Include="Areas\Chapter5\Views\Shared\_BasicLayout.cshtml" />
+    <Content Include="Areas\Chapter5\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\Chapter5\Views\Home\NameAndPrice.cshtml" />
+    <Content Include="Areas\Chapter5\Views\Home\DemoExpression.cshtml" />
     <None Include="packages.config" />
     <Content Include="Areas\Chapter2\Views\Home\Index.cshtml" />
     <Content Include="Areas\Chapter2\Views\Home\RSVPForm.cshtml" />
