--- a/Textbook Exercises/PRO_ASP.NET_MVC/PartOne/PartOne.Introduction.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/PartOne/PartOne.Introduction.csproj
@@ -114,6 +114,9 @@
     <Compile Include="Areas\Chapter5\Chapter5AreaRegistration.cs" />
     <Compile Include="Areas\Chapter5\Controllers\HomeController.cs" />
     <Compile Include="Areas\Chapter5\Models\Product.cs" />
+    <Compile Include="Areas\Chapter6\Chapter6AreaRegistration.cs" />
+    <Compile Include="Areas\Chapter6\Models\Merchandise.cs" />
+    <Compile Include="Areas\Chapter6\Models\TotalValueCalculator.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -135,6 +138,7 @@
     <Content Include="Areas\Chapter5\Views\Home\NameAndPrice.cshtml" />
     <Content Include="Areas\Chapter5\Views\Home\DemoExpression.cshtml" />
     <Content Include="Areas\Chapter5\Views\Home\DemoArray.cshtml" />
+    <Content Include="Areas\Chapter6\Views\web.config" />
     <None Include="packages.config" />
     <Content Include="Areas\Chapter2\Views\Home\Index.cshtml" />
     <Content Include="Areas\Chapter2\Views\Home\RSVPForm.cshtml" />
@@ -155,6 +159,8 @@
     <Folder Include="Areas\Chapter3\Views\Home\" />
     <Folder Include="Areas\Chapter3\Views\Shared\" />
     <Folder Include="Areas\Chapter4\Views\Shared\" />
+    <Folder Include="Areas\Chapter6\Controllers\" />
+    <Folder Include="Areas\Chapter6\Views\Shared\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Home\" />
   </ItemGroup>
