--- a/Textbook Exercises/PRO_ASP.NET_MVC/PartOne/PartOne.Introduction.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/PartOne/PartOne.Introduction.csproj
@@ -115,7 +115,9 @@
     <Compile Include="Areas\Chapter5\Controllers\HomeController.cs" />
     <Compile Include="Areas\Chapter5\Models\Product.cs" />
     <Compile Include="Areas\Chapter6\Chapter6AreaRegistration.cs" />
+    <Compile Include="Areas\Chapter6\Controllers\HomeController.cs" />
     <Compile Include="Areas\Chapter6\Models\Merchandise.cs" />
+    <Compile Include="Areas\Chapter6\Models\ShoppingCart.cs" />
     <Compile Include="Areas\Chapter6\Models\TotalValueCalculator.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
@@ -139,6 +141,7 @@
     <Content Include="Areas\Chapter5\Views\Home\DemoExpression.cshtml" />
     <Content Include="Areas\Chapter5\Views\Home\DemoArray.cshtml" />
     <Content Include="Areas\Chapter6\Views\web.config" />
+    <Content Include="Areas\Chapter6\Views\Home\Index.cshtml" />
     <None Include="packages.config" />
     <Content Include="Areas\Chapter2\Views\Home\Index.cshtml" />
     <Content Include="Areas\Chapter2\Views\Home\RSVPForm.cshtml" />
@@ -159,7 +162,6 @@
     <Folder Include="Areas\Chapter3\Views\Home\" />
     <Folder Include="Areas\Chapter3\Views\Shared\" />
     <Folder Include="Areas\Chapter4\Views\Shared\" />
-    <Folder Include="Areas\Chapter6\Controllers\" />
     <Folder Include="Areas\Chapter6\Views\Shared\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Home\" />
