--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Web.config
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Web.config
@@ -15,7 +15,8 @@
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
 	</appSettings>
 	<connectionStrings>
-		<add name="EFDbContext" connectionString="Data Source=JEANPC\DEVSERVER; Initial Catalog=SportsStore;Integrated Security=True" providerName="System.Data.SqlClient" />
+		<add name="SportsStoreDbContext" connectionString="Data Source=JEANPC\DEVSERVER; Initial Catalog=SportsStore;Integrated Security=True" providerName="System.Data.SqlClient" />
+		<add name="AdvWorksDbContext" connectionString="Data Source=JEANPC\DEVSERVER; Initial Catalog=AdventureWorks2022;Integrated Security=True" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
