--- a/Textbook Exercises/PRO_ASP.NET_MVC/Global.UnitTests/Global.UnitTests.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/Global.UnitTests/Global.UnitTests.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Chapter6.Tests\LinqValueCalc.Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SportsStore.UnitTests\PageLinksTests.cs" />
+    <Compile Include="SportsStore.UnitTests\CartTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
