--- a/Pluralsight Tutorials/3. Learning the C-Sharp Language/2. C-Sharp Fundamentals/WORKSPACE/Module9/Module9.csproj
+++ b/Pluralsight Tutorials/3. Learning the C-Sharp Language/2. C-Sharp Fundamentals/WORKSPACE/Module9/Module9.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="BethanysPieShopHRM.Logic">
+    <Reference Include="RHJ_Services.Logic">
       <HintPath>..\..\Assets\LocalCustomLogic.dll</HintPath>
     </Reference>
   </ItemGroup>
