--- a/Textbook Exercises/SportsStore.Web/SportsStore.UnitTests/SportsStore.UnitTests.csproj
+++ b/Textbook Exercises/SportsStore.Web/SportsStore.UnitTests/SportsStore.UnitTests.csproj
@@ -117,6 +117,16 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SportsStore.Domain\SportsStore.Domain.csproj">
+      <Project>{03e71439-4fb9-4c8a-9095-6e5838809d5c}</Project>
+      <Name>SportsStore.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SportsStore.Web\SportsStore.Web.csproj">
+      <Project>{39124a00-e127-4711-9226-ee0722150161}</Project>
+      <Name>SportsStore.Web</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
